--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,10 @@
+auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_configured=true
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=true
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/library/scss:/library/css
 auxiliary.org-netbeans-modules-php-wordpress.enabled=true
 auxiliary.org-netbeans-modules-php-wordpress.plugins=
 auxiliary.org-netbeans-modules-php-wordpress.themes=
