--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -9,10 +9,13 @@ auxiliary.org-netbeans-modules-php-wordpress.enabled=true
 auxiliary.org-netbeans-modules-php-wordpress.plugins=
 auxiliary.org-netbeans-modules-php-wordpress.themes=
 auxiliary.org-netbeans-modules-php-wordpress.wp-root=../../../
+code.analysis.excludes=
+file.reference.Endo-htdocs=../../..
 file.reference.Libraries-wordpress=../../../../../../../../Libraries/wordpress
+ignore.path=
 include.path=\
     ${php.global.include.path}:\
-    ${file.reference.Libraries-wordpress}
+    ${file.reference.Endo-htdocs}
 php.version=PHP_53
 source.encoding=UTF-8
 src.dir=.
